anna pushing newest hekcman.bib

--- a/abc_comprehensivecba_2016-08-26a_alz.tex
+++ b/abc_comprehensivecba_2016-08-26a_alz.tex
@@ -200,9 +200,7 @@ Both the first and second phases of randomization were conducted at the family l
 
 \subsection{Control Group Substitution}
 
-In both programs, many control group subjects attend alternative preschools.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias on social experiments.} In ABC, \treatsubsabc\ of control-group subjects were enrolled in one of 11 local center-based childcare centers. Most of these centers received federal subsidies and were regulated by the Federal Interagency Day Care Requirements. Their staff members were required to be trained in early childhood education, and the centers were required to implement approved curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children. They had to comply to stringent staff-child ratios.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} In CARE, \treatsubscarec\ of the control group and \treatsubscaref\ of the family education group were enrolled in alternative preschools by their parents (see Figure~\ref{tab:programcomparison}). Parents in both of these groups had as options a similar set of local center-based childcare centers as the ABC children in the control group. We document this more thoroughly in Appendix~\ref{appendix:background}. Families of the participants in the control group selected into different intensities of alternative preschool. 
-
-Figure~\ref{fig:enrollment-alt-pre} shows that although over 80\% of children were enrolled in alternative preschool starting at age 2, it is not until the children are older (age 3) the average number of months enrolled increases. Across all 5 years, most children are enrolled 60\% of the time (Figure~\ref{fig:proportion-alt-pre}).
+In both programs, many control group subjects attend alternative preschools.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias on social experiments.} In ABC, \treatsubsabc\ of control-group subjects were enrolled in one of 11 local center-based childcare centers. Most of these centers received federal subsidies and were regulated by the Federal Interagency Day Care Requirements. Their staff members were required to be trained in early childhood education, and the centers were required to implement approved curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children. They had to comply to stringent staff-child ratios.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} In CARE, \treatsubscarec\ of the control group and \treatsubscaref\ of the family education group were enrolled in alternative preschools by their parents (see Figure~\ref{tab:programcomparison} and Figure~\ref{fig:proportion-alt-pre}). Parents in both of these groups had as options a similar set of local center-based childcare centers as the ABC children in the control group. We document this more thoroughly in Appendix~\ref{appendix:background}. Families of the participants in the control group selected into different intensities of alternative preschool. 
 
 \begin{figure}[H]
 \begin{subfigure}[h]{0.8\textwidth}
