--- a/heckman.bib
+++ b/heckman.bib
@@ -29638,6 +29638,16 @@
   Timestamp                = {2014.07.27}
 }
 
+@Unpublished{ABCCARE_Dataset,
+  Title                    = {Documentation of Full ABC/CARE Treatment Effects},
+  Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, J. and Hojman, Andr\'{e}s and Koh, Yu Kyung and Shea, Joshua and Ziff, Anna},
+  Note                     = {Unpublished Manuscript, University of Chicago},
+  Year                     = {2016},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.08.23}
+}
+
 @Unpublished{Garcia_Heckman_etal_2013_kentucky,
   Title                    = {A Mentor-Child Interaction Model},
   Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, James J. and Mosso, Stefano and Wang, Yike},
@@ -47510,6 +47520,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Year                     = {1967},
   Pages                    = {69--76},
   Volume                   = {20}
+}
+
+@Unpublished{Kottelenberg-Lehrer_2014_Gender-Effects,
+  Title                    = {The Gender Effects of Universal Child Care in {C}anada: Much Ado about Boys?},
+  Author                   = {Kottelenberg, Michael J. and Lehrer, Steven F.},
+  Note                     = {Unpublished manuscript, Department of Economics, Queen's University},
+
+  Month                    = {August},
+  Year                     = {2014},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.08.22}
 }
 
 @Article{Kottelenberg_Lehrer_2013_CPP,
