--- a/output/select_rslt_male_2016-08-23a_jld.tex
+++ b/output/select_rslt_male_2016-08-23a_jld.tex
@@ -60,7 +60,7 @@
 
   &   &  & \mc{1}{c}{\textbf{(0.066)}} & \mc{1}{c}{\textbf{(0.066)}}  & \mc{1}{c}{\textbf{(0.079)}} & \mc{1}{c}{(0.289)}  & \mc{1}{c}{\textbf{(0.066)}} & \mc{1}{c}{\textbf{(0.079)}} \\
 
-  &  \mc{1}{l}{Years of Edu.} & \mc{1}{c}{30} & \mc{1}{c}{0.525} & \mc{1}{c}{0.708}  & \mc{1}{c}{1.302} & \mc{1}{c}{0.791}  & \mc{1}{c}{0.540} & \mc{1}{c}{0.347} \\
+  &  \mc{1}{l}{Years of Education} & \mc{1}{c}{30} & \mc{1}{c}{0.525} & \mc{1}{c}{0.708}  & \mc{1}{c}{1.302} & \mc{1}{c}{0.791}  & \mc{1}{c}{0.540} & \mc{1}{c}{0.347} \\
 
    &  &  & \mc{1}{c}{\textbf{(0.079)}} & \mc{1}{c}{\textbf{(0.079)}}  & \mc{1}{c}{\textbf{(0.092)}} & \mc{1}{c}{(0.171)}  & \mc{1}{c}{(0.132)} & \mc{1}{c}{(0.276)} \\
 
