--- a/preamble.tex
+++ b/preamble.tex
@@ -25,7 +25,7 @@
 \usepackage{caption}
 \usepackage{fixltx2e}
 \usepackage[para, flushleft]{threeparttablex}
-\usepackage[capposition=top]{floatrow}
+\usepackage[capposition=top,objectset=centering]{floatrow}
 \usepackage{subcaption}
 \usepackage{pdfpages}
 \usepackage{pdflscape}
