anna changing file structure -- always keep abc_comprehensivecba and make changes to that, then make new files with the typists naming convention

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_2016-08-26a_alz}
+\externaldocument{abc_comprehensivecba}
 \pagenumbering{roman}
 
 \begin{document}
