--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -183,19 +183,16 @@ In our analysis, we pool the treatment group in CARE that received the center-ba
 
 \begin{table}[htbp]
 \centering
-\begin{threeparttable}
 \caption{ABC and CARE, Program Comparison} \label{tab:programcomparison}
-\footnotesize
-\centerline{
-	\scalebox{0.8}{
+\begin{adjustbox}{max width=\textwidth}
+\begin{threeparttable}
 	\input{output/abccare_programcomparison_2016-08-27a_alz.tex}
-	}
-}
-\footnotesize
 \begin{tablenotes}
+\footnotesize
 \item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that  \\ ABC and CARE had the same characteristic.
 \end{tablenotes}
-\end{threeparttable}%
+\end{threeparttable}
+\end{adjustbox}
 \end{table}
 
 
@@ -225,10 +222,9 @@ Most of these alternative preschools received federal subsidies and were federal
 	\centering
 	\caption{Fraction of Months in Alternative Preschool} \label{fig:proportion-alt-pre}
 		\includegraphics[width=\textwidth]{output/abccare_Vfractimes.eps}
-\floatfoot{
 \footnotesize
-\noindent Note: Panel (a) displays the cumulative density function of enrollment in alternative preschools of the ABC/CARE control group. Panel (b) displays the fraction of children in the ABC/CARE control group enrolled in alternative preschool during the fraction of months from ages 0 to 5 (conditional on ever being enrolled) in the $x$-axis.
-}
+\justify
+Note: Panel (a) displays the cumulative density function of enrollment in alternative preschools of the ABC/CARE control group. Panel (b) displays the fraction of children in the ABC/CARE control group enrolled in alternative preschool during the fraction of months from ages 0 to 5 (conditional on ever being enrolled) in the $x$-axis.
 \end{subfigure}
 \end{figure}
 
@@ -481,28 +477,32 @@ The results for females indicate an increase in employment, which strengthens wh
 The robust results for males are seen in health outcomes as opposed to education outcomes. Treated subjects reported lower drug use and blood pressure. The results for employment, hypertension, blood pressure, and graduation from a 4-year college are strengthened when fixing the control group to those subjects who attended alternative preschools. This is an opposite trend from the results of the females.
 
 \begin{table}[H]
+\centering
+\begin{threeparttable}
 \caption{Selected Outcomes, ABC/CARE Females}\label{resultsfemales}
-\begin{center}
 \begin{scriptsize}
 \input{output/select_rslt_female_2016-08-26a_alz}
 \end{scriptsize}
-\end{center}
-\floatfoot{
+\begin{tablenotes}
 \footnotesize
-\noindent Note: This table shows the treatment effects for categories outcomes that are important for our cost/benefit analysis. Systolic and Diastolic blood pressure are measured in terms of mm Hg. Bootstrapped $p$-values are in parentheses. (1) Mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. (2) Adjusts estimates in (1) for attrition and controls for a set of covariates. (3) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. (4) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely not to be enrolled in alternative preschools. (5) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects received preschool alternatives. (6) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely to be enrolled in alternative preschools.\\}
+\item Note: This table shows the treatment effects for categories outcomes that are important for our cost/benefit analysis. Systolic and Diastolic blood pressure are measured in terms of mm Hg. Bootstrapped $p$-values are in parentheses. (1) Mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. (2) Adjusts estimates in (1) for attrition and controls for a set of covariates. (3) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. (4) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely not to be enrolled in alternative preschools. (5) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects received preschool alternatives. (6) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely to be enrolled in alternative preschools.
+\end{tablenotes}
+\end{threeparttable}
 \end{table}
 
 
 \begin{table}[H]
+\centering
+\begin{threeparttable}
 \caption{Selected Outcomes, ABC/CARE Males}\label{resultsmales}
-\begin{center}
 \begin{scriptsize}
 \input{output/select_rslt_male_2016-08-23a_jld}
 \end{scriptsize}
-\end{center}
-\floatfoot{
+\begin{tablenotes}
 \footnotesize
-\noindent Note: This table shows the treatment effects for categories outcomes that are important for our cost/benefit analysis. Systolic and Diastolic blood pressure are measured in terms of mm Hg. Bootstrapped $p$-values are in parentheses. (1) Mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. (2) Adjusts estimates in (1) for attrition and controls for a set of covariates. (3) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. (4) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely not to be enrolled in alternative preschools. (5) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects received preschool alternatives. (6) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely to be enrolled in alternative preschools.\\}
+\item Note: This table shows the treatment effects for categories outcomes that are important for our cost/benefit analysis. Systolic and Diastolic blood pressure are measured in terms of mm Hg. Bootstrapped $p$-values are in parentheses. (1) Mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. (2) Adjusts estimates in (1) for attrition and controls for a set of covariates. (3) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. (4) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely not to be enrolled in alternative preschools. (5) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, restricting the latter to subjects received preschool alternatives. (6) Mean difference between the groups randomly assigned to received center-based childcare and the groups randomly assigned not to, placing a relatively high weight to the subjects who are likely to be enrolled in alternative preschools.
+\end{tablenotes}
+\end{threeparttable}
 \end{table}
 
 \subsection{Combining Functions} \label{section:c-functions}
@@ -521,7 +521,7 @@ We can further decompose the counts in Figure~\ref{fig:ppositive} into categorie
 
 \begin{figure}[H]
 		\caption{Positively Impacted Outcomes by Category, ABC/CARE Males and Females} \label{fig:ppositivecategory1}
-		\includegraphics[width=.8\columnwidth]{output/itt_noctrl_cats1.eps}
+		\includegraphics[width=.65\columnwidth]{output/itt_noctrl_cats1.eps}
 \floatfoot{
 \footnotesize
 \noindent Note: For each outcome category, we compare the mean of the subjects who received center-based childcare in ABC/CARE to the mean of the subjects in the control group and count the number of positive comparisons.}
@@ -529,7 +529,7 @@ We can further decompose the counts in Figure~\ref{fig:ppositive} into categorie
 
 \begin{figure}[H]
 		\caption{Positively Impacted Health Outcomes, ABC/CARE Males and Females} \label{fig:ppositivecategory2}
-		\includegraphics[width=.78\columnwidth]{output/itt_noctrl_cats2.eps}
+		\includegraphics[width=.65\columnwidth]{output/itt_noctrl_cats2.eps}
 \floatfoot{
 \footnotesize
 \noindent Note: For each outcome category, we compare the mean of the subjects who received center-based childcare in ABC/CARE to the mean of the subjects in the control group and count the number of positive comparisons.}
@@ -593,21 +593,19 @@ The estimates are robust to individually removing the rest of the components, an
 
 Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates lose significance due to the reduction of observations after splitting the sample by gender. The point estimates remain robust across  the sensitivity analysis. For females, we observe consistency except for the case where we remove the parental income component. We can observe that the female sample is the main driver of parental income when comparing its net present value between females and males. For males, the estimates are robust, similar to the female sample.
 
-\begin{sidewaystable}[H]
+\begin{table}[H]
 \centering
+\caption{Cost/benefit Analysis of ABC/CARE, Summary}\label{table:cba}
+\begin{adjustbox}{max width=\textwidth}
 \begin{threeparttable}
-\caption{Cost/benefit Analysis of ABC/CARE, Summary}
-\label{table:cba}
-\centerline{
-	\scalebox{0.85}{
-		\input{output/sensitivity.tex}
-	}
-}
+\input{output/sensitivity.tex}
 \begin{tablenotes}
+\footnotesize
 \item Note: This table presents the estimates of the net present value (NPV) for each component, and the internal rate of return (IRR) and the benefit/cost ratio (B/C) of ABC/CARE for different scenarios based on comparing the groups randomly assigned to receive center-based childcare and the groups randomly assigned as control in ABC/CARE. The first row represents the baseline estimates. The rest of the rows present estimates for scenarios in which we remove the NPV estimates of the component listed in the first column. The quantity listed in the NPV columns is the component we actually remove when computing the calculation in each row. All the money figures are in 2014 USD and are discounted to each child's birth, unless otherwise specified. For the B/C we use a discount rate of $3\%$, unless otherwise specified. We test the null hypotheses $\text{IRR} = 3\%$ and $\text{B/C} = 1$---we elect $3\%$ because that is the discount rate we use. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test. We resample both the experimental and the auxiliary data sources.
 \end{tablenotes}
 \end{threeparttable}
-\end{sidewaystable}
+\end{adjustbox}
+\end{table}
 
 We provide a cost-benefit analysis of the program when accounting for control substitution (Table~\ref{table:cbacs}). The first row shows the estimates without accounting for control substitution, i.e. the same as those of the first row in Table~\ref{table:cba}. The second and third rows present results for the two counterfactual comparisons we consider.
 
@@ -622,6 +620,7 @@ The samples used to produce estimates relative to enrollment in alternatives pre
 \centering
 \input{output/cba_summary_controls_trim.tex}
 \begin{tablenotes}
+\footnotesize
 \item Note: This table displays estimates of the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) for ABC/CARE for three cases. Not accounting for control substitution (baseline); comparing ABC/CARE to staying at home (relative to staying at home); and comparing ABC/CARE to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. We test the null hypotheses $\text{IRR} = 3\%$ and $\text{B/C} = 1$---we elect $3\%$ because that is the discount rate we use. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test. We resample both the experimental and the auxiliary data sources.
 \end{tablenotes}
 \end{threeparttable}
