anna fixing alignment of programcomparison table

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -189,7 +189,7 @@ In our analysis, we pool the treatment group in CARE that received the center-ba
 	\input{output/abccare_programcomparison_2016-08-27a_alz.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that  \\ ABC and CARE had the same characteristic.
+\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that ABC and CARE had the same characteristic.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
